controller getDetailsPreventa swagger
